--- a/redwood.toml
+++ b/redwood.toml
@@ -9,7 +9,7 @@
   title = "Redwood App"
   port = 8910
   apiUrl = "/.redwood/functions" # You can customize graphql and dbauth urls individually too: see https://redwoodjs.com/docs/app-configuration-redwood-toml#api-paths
-  includeEnvironmentVariables = ['DATABASE_URL', 'DIRECT_URL', 'ENABLE_EXPERIMENTAL_COREPACK', 'YARN_VERSION']
+  includeEnvironmentVariables = ['DATABASE_URL', 'ENABLE_EXPERIMENTAL_COREPACK', 'YARN_VERSION']
 [api]
   port = 8911
 [browser]
